Improve dev container Dockerfile readability

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,10 +6,11 @@ RUN extism lib install
 ENV LD_LIBRARY_PATH="/usr/local/lib:$LD_LIBRARY_PATH"
 
 # Install tinygo
-RUN ARCH=$(dpkg --print-architecture) \
- && curl -sLO https://github.com/tinygo-org/tinygo/releases/download/v0.36.0/tinygo_0.36.0_${ARCH}.deb \
- && sudo dpkg -i tinygo_0.36.0_${ARCH}.deb \
- && rm tinygo_0.36.0_${ARCH}.deb
+RUN VERSION=0.36.0 \
+ && ARCH=$(dpkg --print-architecture) \
+ && curl -sLO https://github.com/tinygo-org/tinygo/releases/download/v${VERSION}/tinygo_${VERSION}_${ARCH}.deb \
+ && sudo dpkg -i tinygo_${VERSION}_${ARCH}.deb \
+ && rm tinygo_${VERSION}_${ARCH}.deb
 
 # Install XTP
 RUN curl -s https://static.dylibso.com/cli/install.sh | bash
